[tool.poetry]
name = "basic-assignments"
version = "0.1.0"
description = "Basic assignments of A Lab Python workshop"
authors = ["scizorman <tueda1207@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^0.35.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
